# Engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json
Engine/: CMakeLists.txt  Engine.cpp  EngineConfig.h.in  Game.cpp  HelloTriangle.cpp  Main.cpp  aabb.hpp  game.hpp
Engine/Renderer/: QueueFamilyIndices.cpp  QueueFamilyIndices.hpp  Renderer.cpp  Renderer.hpp  Vertex.cpp  Vertex.hpp
shaders/: frag.spv  shader.frag  shader.vert
